--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   path: ^1.8.0
   time_range_picker: ^2.0.1
   flutter_datetime_picker: ^1.5.1
+  circular_profile_avatar: ^2.0.0
+  video_player: ^2.1.12
+  visibility_detector: ^0.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
