--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   video_player: ^2.1.12
   visibility_detector: ^0.2.0
   intl: ^0.17.0
+  flutter_keyboard_visibility: ^5.0.3
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
