--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   google_sign_in: ^5.0.7
   flutter_facebook_auth: ^3.5.1
   flutter_launcher_icons: ^0.9.2
+  shared_preferences: any
 
 dev_dependencies:
   flutter_test:
