--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -10,14 +10,14 @@
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
+	<key>CFBundleInfoDictionaryVersion</key>f
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>Dialboxx</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -53,6 +53,15 @@
 	<false/>
 	<key>GoogleUtilitiesAppDelegateProxyEnabled</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>youtube</string>
+		<string>whatsapp</string>
+		<string>instagram</string>
+		<string>fb</string>
+		<string>tel</string>
+		<string>mailto</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -61,27 +70,31 @@
 		<true/>
 	</dict>
 	<key>NSAppleMusicUsageDescription</key>
-	<string>Dialboxx would like to access your Music</string>
+	<string>Your Music Library is used to update Alerts.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Your bluetooth is used for directions.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Your bluetooth is used for directions.</string>
 	<key>NSCalendarsUsageDescription</key>
-	<string>Dialboxx would like to access your calender.</string>
+	<string>Your calendar is used to give precise date for messages.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Your Camera is used to update your profile and add food images.</string>
+	<string>Your camera is used to update your profile picture and add product images.</string>
 	<key>NSContactsUsageDescription</key>
-	<string>YOur Contact is used to update your profile with contact information.</string>
+	<string>Your contact list is used to connect</string>
 	<key>NSLocalNetworkUsageDescription</key>
-	<string>Dialboxx use your local network for Server communication.</string>
+	<string>Dialboxx uses your local network for Server communication.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Your Location is used to show you nearby foods.</string>
+	<string>Your location is used to show you businesses nearby.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Your Location is used to provide directions to destination.</string>
+	<string>Your location is used to provide directions to the destination.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Dialboxx need to access your device microphone.</string>
+	<string>Dialboxx needs to access your device microphone for audio.</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Dialboxx would like to access your motion.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Your photo library is used to update food image and profile picture.</string>
+	<string>Your photo library is used to update profile picture and add product images.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
-	<string>The app uses speech recognition for dictating notes.</string>
+	<string>The app uses speech recognition for dictating messages.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
